# masters-thesis

./: .gitignore  CHANGELOG.md  README.md  References-Bibtex.bib  build.sh  clean.sh  notes.md  references.bib  references2.bib  thesis.tex  thesis.typ
.github/workflows/: build.yaml
0_frontmatter/: abstract.tex
1_introduction/: introduction.tex
3_chapter3/: chapter3.tex
5_chapter5/: chapter5.tex
data_analysis/: filterReposDown.py  graph_creator.py  hub_score_analysis.py  main.py  plot_hub_scores.py  pyproject.toml  thesis_data_v2.json
data_analysis/machine_learning/: decision_tree.ipynb  decision_tree.py  exporatory_analysis.py  prediction_results.csv  prediction_results_cv.csv  repo_metrics_cv.csv  repo_metrics_test.csv  repo_metrics_train.csv  validation.py
data_analysis/machine_learning/.ipynb_checkpoints/: decision_tree-checkpoint.ipynb
data_analysis/machine_learning/saved_model/: dt_model_no_smote.joblib  dt_model_smote.joblib  label_encoder.joblib  selected_features.txt  selector.joblib  var_thresh.joblib
data_analysis/src/: compare_metrics.py  filterReposDown.py  hub_gmm_analysis.py  hub_score_analysis.py  plot_hub_distribution.py  plot_hub_scores.py
report/: @w  cohens_kappa.py  filtered_repos.json  notes.md  references.bib  thesis.typ
rust_repo_analyser/: .gitignore  docker-compose.yml
scraper/: .gitignore  Cargo.toml  file_graph.json  joss_papers.json  thesis_data_v2.json
scraper/cli/: Cargo.toml
scraper/cli/src/: main.rs
scraper/repo_scraper/: Cargo.toml
scraper/repo_scraper/src/: joss_scraper.rs  lib.rs
scraper/src/: main.rs  (+1 more)
(+23 files in other folders)
