[project]
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "neo4j>=5.0.0",
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "jupyterlab>=4.5.6",
    "notebook>=7.5.5",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "skope-rules>=1.0.1",
    "te2rules>=1.0.1",
]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
